<resources>
    <string name="app_name">CEO Calendar</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="view_folder">View Folder</string>
    <string name="all_event">All Event</string>
    <string name="all_notes">All Notes</string>
    <string name="menu">Menu</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="new_event">New Event</string>
    <string name="new_event_plus">Click + to add new event</string>
    <string name="save">Save</string>
    <string name="date_show">09/10/2023</string>
    <string name="text_event">text of event</string>
    <string name="edit_text_event">edit text of event</string>
    <string name="time_of_event">--:--</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="txt_no">No</string>
    <string name="button">button</string>
    <string name="delete_all_image_event">Clear All Image?</string>
    <string name="app_needs_connect">App needs connect to your Storage!</string>
    <string name="title_view_image">View Images</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contentDescription">TODO</string>
    <string name="please_type_text">Please type text!</string>
    <string name="copied">Copied!</string>
    <string name="copied_content">Copied content!</string>
    <string name="update_event">Event</string>
    <string name="text_update">Update</string>
    <string name="text_here">Event</string>
    <string name="text_time_ic">Time:</string>
    <string name="note_add_event">Notes</string>
    <string name="update_success">Success!</string>
    <string name="btn_ok">OK</string>
    <string name="yes">Yes</string>
    <string name="notification_event_name_empty">Event name is empty!</string>
    <string name="download_folder_name">/Pictures</string>
    <string name="menu_name">CEO Calendar</string>
    <string name="menu_meditation">Falundafa.org</string>
    <string name="list_all_event">All Event</string>
    <string name="list_all_notes">All Notes</string>
    <string name="ratting_app">Update &amp; \nRatting App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="how_human_kind_came_to_be">Why there is mankind?</string>
    <string name="select_language_title">Select language</string>
    <string name="list_all_note">All Notes</string>
    <string name="calendar_setting">Calendar Setting</string>
    <string name="calendar_setting_title">Setting</string>
    <string name="calendar_style">Calendar Style</string>
    <string name="calendar_view_style">Calendar View</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="date_format">Date format</string>
    <string name="layout_bottom">Bottom</string>
    <string name="layout_top">Top</string>
    <string name="one_week">1 Week</string>
    <string name="three_week">3 Week</string>
    <string name="one_month_view">1 Month</string>
    <string name="first_week_monday">Monday</string>
    <string name="first_week_sunday">Sunday</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="mm_dd_yyyy">MM/dd/yyyy</string>
    <string name="yyyy_mm_dd">yyyy/MM/dd</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_folder">New Folder</string>
    <string name="btn_create">Create</string>
    <string name="folder_name_hint">Name</string>
    <string name="folder_thumbnail">Folder Thumbnail</string>
    <string name="notify_create_folder">Type folder name please!</string>
    <string name="time_folder">20/11/2023</string>
    <string name="update_folder_name">Update folder name</string>
    <string name="title_new_note">New Note</string>
    <string name="new_note">Name</string>
    <string name="please_grant_permission">Please grant permission in setting!</string>
    <string name="type_name_please">Type name please!</string>
    <string name="save_note_to_view">Please save note!</string>
    <string name="save_image_to_view">Save image to view!</string>
    <string name="update_note">Notes</string>
    <string name="created">Created!</string>
    <string name="saved">Saved!</string>
    <string name="delete_this_folder">Delete this folder?</string>
    <string name="btn_update_note">Update note</string>
    <string name="delete_all_event">Delete all event?</string>
    <string name="delete_all_notes">Delete all notes?</string>
    <string name="text_coin">99</string>
    <string name="out_of_coin">out of coin!</string>
    <string name="watch_an_ad">Watch an Ads</string>
    <string name="ad_not_ready">Ad is loading, please try again!</string>
    <string name="my_coin">My Coin</string>
    <string name="delete_all_imageNote">Clear All Image?</string>
    <string name="permission_to_read_images">Request permission to read images:</string>
    <string name="permission_to_read_images_content">This function requires permission to view IMAGES to select IMAGES!</string>
    <string name="show_request_permission">Show</string>
    <string name="cancel_request_permission">Cancel</string>
    <string name="setting_request_permission">Setting</string>
    <string name="privacy_policy_content">
    <![CDATA[
        <strong>Privacy Policy CEO Calendar</strong>
        <p>CEO Calendar built the  app as (free/ ad-supported/ buy in the application) app. This SERVICE is provided by CEO Calendar and is intended for use as is.</p>
        <p>This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
        <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.</p>
        <p><strong>Information Collection and Use</strong></p>
        <p>We do not collect personal data (full name, address, contact information, email, phone number, image, ... Personal documents any other).</p>
        <p>The information that we request will be retained on your device and is not collected by us in any way.</p>
        <p>Applications can collect data used such as: Login time, usage status ...</p>

        <div>
        <p>The app does use third-party services that may collect information used to identify you.</p>
        <p>Link to the privacy policy of third-party service providers used by the app </p>
        <ul>
        <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
        <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li>
        <li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
        <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
        
        </ul></div>
        <p><strong>Log Data</strong></p>
        <p> We want to inform you that whenever you use our Service, in a case of an error in the app We collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
        <p><strong>Service Providers</strong></p>
        <p>We may employ third-party companies and individuals due to the following reasons:</p>
        <ul>
        <li>To facilitate our Service;</li>
        <li>To provide the Service on our behalf;</li>
        <li>To perform Service-related services; </li>
        <li>To assist us in analyzing how our Service is used.</li>
        </ul>

        <p>We want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
        <p><strong>Security</strong></p>
        <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and We cannot guarantee its absolute security.</p>
        <p><strong>Links to Other Sites</strong></p>
        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, We strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
        <p><strong>Children’s Privacy</strong></p>
        <div>
        <p>These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13 years of age. In the case We discover that a child under 13 has provided us with personal information, We immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that We will be able to do the necessary actions.</p>
        </div>

        
        <p><strong>Changes to This Privacy Policy</strong></p>
        <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
        <p>This policy is effective as of 2024-01-17</p>
        <p><strong>Contact Us</strong></p>
        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact me at:</p>
        <p>minhviet.dragon@gmail.com</p>
        <p>This privacy policy page was created at <a href="https://privacypolicytemplate.net" target="_blank" rel="noopener noreferrer">privacypolicytemplate.net </a>and modified/generated by <a href="https://app-privacy-policy-generator.nisrulz.com/" target="_blank" rel="noopener noreferrer">App Privacy Policy Generator</a></p>
        <p>Link CEO Calendar Privacy Policy: <a href="https://minhviet123tv.github.io/CEOCalendar/" target="_blank" rel="noopener noreferrer">CEO Calendar Privacy Policy</a></p>
    ]]>
    </string>
</resources>