<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/menu_1_calendar_logo"/>

    <item
        android:id="@+id/menu_view_all_event"
        android:title="@string/all_event"
        android:icon="@drawable/menu_list_event_fragment"/>

    <item
        android:id="@+id/menu_notes"
        android:title="@string/notes"
        android:icon="@drawable/menu_2_notes"/>

<!--    <item-->
<!--        android:id="@+id/menu_view_all_notes"-->
<!--        android:title="@string/all_notes"-->
<!--        android:icon="@drawable/menu_list_notes"/>-->

    <item
        android:id="@+id/menu_menu"
        android:title="@string/menu"
        android:icon="@drawable/menu_3_setting_1"/>

</menu>