<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary_activity"
    tools:context=".menu.SettingCalendarFragment">

    <RelativeLayout
        android:id="@+id/layout_menu_setting_calendar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:minHeight="48dp"
        android:background="@color/white"
        android:elevation="3dp">

        <ImageButton
            android:id="@+id/ic_back_menu_setting_calendar_fm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/primary_padding_activity"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back_96"
            tools:ignore="ContentDescription,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txt_title_menu_setting_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_setting"
            android:textSize="@dimen/title_menu_setting_calendar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            tools:ignore="RtlSymmetry"/>

    </RelativeLayout>

    <!--Scroll-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_all_setting"
        android:layout_below="@+id/layout_menu_setting_calendar_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/primary_padding_activity"
            android:paddingEnd="@dimen/primary_padding_activity">

            <RelativeLayout
                android:id="@+id/layout_setting_days_in_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txt_calendar_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/calendar_view_style"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_row_menu_setting_calendar"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <RadioGroup
                    android:id="@+id/rdg_calendar_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/txt_calendar_style"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdb_1_one_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/one_week"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"
                        android:elevation="4dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdb_2_three_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/three_week"
                        android:layout_marginStart="15dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"
                        android:elevation="4dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdb_5_month_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/one_month_view"
                        android:layout_marginStart="15dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"
                        android:elevation="4dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_setting_style_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/layout_setting_days_in_week">

                <TextView
                    android:id="@+id/txt_layout_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/calendar_style"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_row_menu_setting_calendar"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <RadioGroup
                    android:id="@+id/rdg_layout_day_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/txt_layout_style"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdb_layout_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/layout_top"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"
                        android:elevation="4dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdb_layout_bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/layout_bottom"
                        android:layout_marginStart="15dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/radio_selector"
                        android:textColor="@drawable/radio_text_selector"
                        android:elevation="4dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_setting_calendar_first_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layout_setting_style_calendar">

                <TextView
                    android:id="@+id/txt_calendar_first_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/first_day_of_week"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_row_menu_setting_calendar"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <RadioGroup
                    android:id="@+id/rdg_first_day_of_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_calendar_first_week"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdb_3_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/first_week_monday"
                        android:button="@drawable/radio_button_custom"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rdb_4_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:button="@drawable/radio_button_custom"
                        android:text="@string/first_week_sunday"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_setting_calendar_date_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layout_setting_calendar_first_week">

                <TextView
                    android:id="@+id/txt_calendar_date_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:gravity="center_vertical"
                    android:text="@string/date_format"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_row_menu_setting_calendar"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"/>

                <RadioGroup
                    android:id="@+id/rdg_date_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_calendar_date_format"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdb_6_date_format_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/dd_mm_yyyy"
                        android:button="@drawable/radio_button_custom"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/rdb_7_date_format_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:button="@drawable/radio_button_custom"
                        android:text="@string/mm_dd_yyyy"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/rdb_8_date_format_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:button="@drawable/radio_button_custom"
                        android:text="@string/yyyy_mm_dd"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_btn_ok_setting_calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/layout_setting_calendar_date_format">

                <Button
                    android:id="@+id/btn_save_setting_calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_effect_click"
                    android:text="@string/btn_ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_save_cancel"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>