<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_month_view"
    android:layout_margin="16dp"
    android:padding="10dp"
    android:elevation="5dp">

    <TextView
        android:id="@+id/textView_title_delete_all_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/delete_all_event"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/title_list_all_event"/>

    <RelativeLayout
        android:id="@+id/layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_title_delete_all_event"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_no_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/btn_yes_delete"
            android:text="@string/txt_no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/ripple_effect_click_button_cancel"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_yes_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/ripple_effect_click"/>

    </RelativeLayout>

</RelativeLayout>