<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_month_view"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:elevation="5dp">

    <TextView
        android:id="@+id/textView_title_new_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/create_new_folder"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/title_list_all_event"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInPutLayout_new_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_title_new_folder"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/edt_new_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/folder_name_hint"
            android:background="@drawable/bg_edt_event_name"
            android:hint="@string/folder_name_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="@dimen/edt_add_event"
            android:scrollHorizontally="true"
            android:layout_alignParentStart="true"
            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/layout_button_new_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInPutLayout_new_folder"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_cancel_new_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/btn_ok_new_folder"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/ripple_effect_click_button_cancel"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_ok_new_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ripple_effect_click"
            android:text="@string/btn_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>