<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.FolderFragment"
    android:background="@color/bg_primary_activity"
    android:id="@+id/layout_fragment_all_folder">

    <RelativeLayout
        android:id="@+id/layout_menu_control_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@color/white"
        android:elevation="3dp">

        <TextView
            android:id="@+id/txt_notes_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notes"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_selected_date"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <RelativeLayout
            android:id="@+id/layout_btn_add_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/btn_add_folder"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:padding="3dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_new_folder_1"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/txt_coin_number_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_coin_number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/text_coin"
                android:textColor="@color/white"
                android:textSize="@dimen/coin"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/btn_add_folder"
                android:layout_marginStart="-10dp"
                tools:ignore="TextSizeCheck"
                android:visibility="gone"/>

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_folder_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/layout_menu_control_folder"/>

</RelativeLayout>